
name:                forkbench-cloud-haskell
version:             0.1.0.0
author:              Ryan Scott, Ryan Newton
build-type:          Simple
cabal-version:       >=1.10

executable forkbench-cloud-haskell
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq
                     , distributed-process
                     , network-transport
                     , network-transport-tcp
  default-language:    Haskell2010
