
name:                forkbench-ghc-sparks
version:             0.1.0.0
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           2016 Ryan Newton
build-type:          Simple
cabal-version:       >=1.10

executable forkbench-ghc-sparks
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , parallel
  default-language:    Haskell2010
