
name:                forkbench-monad-par
version:             0.1.0.0
-- license:             BSD3
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          rrnewton@gmail.com
copyright:           2016 Ryan Newton
build-type:          Simple
cabal-version:       >=1.10

executable forkbench-monad-par
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monad-par
                     , criterion
  default-language:    Haskell2010
